# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
use_goma = false
is_debug = false  # Enable debugging features.

# Set true to enable experimental Skia backend.
pdf_use_skia = false
# Set true to enable experimental Skia backend (paths only).
pdf_use_skia_paths = false

pdf_enable_xfa = false  # Set false to remove XFA support (implies JS support).
pdf_enable_v8 = false  # Set false to remove Javascript support.
pdf_is_standalone = true  # Set for a non-embedded build.
is_component_build = false # Disable component build (must be false)

clang_use_chrome_plugins = false  # Currently must be false.
use_libjpeg_turbo = false
use_glib = false
target_os = "wasm"
target_cpu = "wasm"
pdf_is_complete_lib = true
